# azure-quantum-python

./: .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  azure_quantum_manual_tests.ipynb  bootstrap.ps1  set_version.py  test_set_version.py
.ado/: ci.yml  publish.yml
.config/1espt/: PipelineAutobaseliningConfig.yml
.devcontainer/: devcontainer.json  developer-devcontainer.json  requirements.txt
.devcontainer/developer/: devcontainer.json  requirements.txt
.devcontainer/recordings/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml
azure-quantum/: MANIFEST.in  POC.ipynb  README.md  environment-cirq-beta.yml  environment-qiskit.yml  environment.yml  pytest.ini  requirements-cirq.txt  requirements-dev.txt  requirements-pulser.txt  requirements-pyscf.txt  requirements-qir.txt  requirements-qiskit.txt  requirements-qsharp.txt  requirements-quil.txt  requirements.txt  resourceCounts  setup.py  summary.html  test.py  tox.ini
azure-quantum-qiskit/: setup.py
examples/: QVizWidget.ipynb  azure quantum-qiskit demo.ipynb  azure-quantum-qiskit-demo.ipynb  echo-submit.py  qci-submit.py  qikist-qaoa.py  qikist-vqe.py  qio.py  qiskit-experiments.py  qiskit-job-manager.py  qiskit-sample-aq.py  qiskit-tomography.py  rigetti-e2e.ipynb  rigetti-submit.py  utils.py
qdk/: MANIFEST.in  README.md  environment.yml  setup.py
qiskit-azure-quantum/: README.md  environment.yml  requirements.txt  setup.py
qiskit-qir/: README.md  pyproject.toml  setup.cfg  setup.py
qiskit-qir/qiskit_qir/: __init__.py  builder.py  listener.py  quantumcircuit.py  translate.py
qiskit-qir/src/qiskit_qir/: __init__.py  builder.py  elements.py  quantumcircuit.py  translate.py  visitor.py
qiskit-qir/tests/: README.md  conftest.py  test_circuit.py  test_qiskit_qir.py
qiskit-qir/tests/test_circuits/: __init__.py  basic_circuits.py  random.py
union/: Program.qs  submit.py  union.bc  union.csproj
visualization/: .gitignore  README.md  package-lock.json
(+786 files in other folders)
