[metadata]
name = qiskit-qir
description = a Python library for translating Qiskit into QIR
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/microsoft/qdk-python
author = Microsoft
author_email = qdksgeng@microsoft.com,
license = MIT
license_file = LICENSE

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    qiskit-terra
python_requires = >=3.7
setup_requires =
    setuptools_scm

[bdist_wheel]
universal = 1

[aliases]
test=pytest

[options.extras_require]
test =
    pytest
    pycodestyle
    pytest-cov
all =
    %(test)s
